# substrate_practice

./: .gitignore  Cargo.toml  README.md
crate_04/: Cargo.toml  light.md  shape.md  sum.md
crate_04/src/: main.rs  shape_area.rs  traffic_light.rs  u32_vec.rs
crate_05/: Cargo.toml  readme.md
src/: client.rs  main.rs  server.rs
