[package]
name = "crate_04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "shape_area"
path = "src/shape_area.rs"

[[bin]]
name = "u32_vec"
path = "src/u32_vec.rs"

[[bin]]
name = "traffic_light"
path = "src/traffic_light.rs"